[package]
name = "eywa-axum"
version = "0.1.0"
edition = "2024"
description = "The unified EYWA framework for Axum services"
authors = ["EYWA Team"]

[dependencies]

# Re-exported dependencies (The Service Toolkit)
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1.48" }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
tracing = "0.1"
tower = { version = "0.5", features = ["make", "util"] }
tower-http = { version = "0.6", features = [
    "cors",
    "trace",
    "limit",
    "compression-gzip",
    "compression-deflate",
    "compression-br",
    "normalize-path",
] }

# Common utilities to re-export
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "2.0"
validator = { version = "0.20", features = ["derive"] }
url = "2.5"

# Logging & tracing
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "registry",
    "fmt",
] }
tracing-loki = "0.2"

# Metrics (0.8+ for Axum 0.8 compatibility)
# Metrics
eywa-metrics = { path = "../eywa-metrics" }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Async utilities
async-trait = "0.1"

# Decimal support
rust_decimal = { version = "1.33", features = ["serde", "db-postgres"] }

# Database & Config
sea-orm = { version = "1.1", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
config = "0.15"
dotenvy = "0.15"
uuid = { version = "1.0", features = ["v4", "serde"] }

# EYWA Ecosystem
eywa-axum-macros = { git = "https://github.com/EywaOS/eywa-axum-macros" }
eywa-database = { git = "https://github.com/EywaOS/eywa-database" }
# TEMP: Using path until RFC 7807 changes are pushed
eywa-errors = { path = "../eywa-errors" }
eywa-hateoas = { git = "https://github.com/EywaOS/eywa-hateoas" }
eywa-pagination = { git = "https://github.com/EywaOS/eywa-pagination" }
eywa-authentication = { git = "https://github.com/EywaOS/eywa-authentication" }
eywa-user-id = { git = "https://github.com/EywaOS/eywa-user-id" }
eywa-types = { git = "https://github.com/EywaOS/eywa-types" }
eywa-utoipa = { git = "https://github.com/EywaOS/eywa-utoipa" }

# OpenAPI (utoipa-axum removed for Axum 0.8 compatibility)
utoipa = { version = "5.4", features = ["axum_extras", "uuid", "chrono"] }
utoipa-scalar = { version = "0.3", features = ["axum"] }
utoipa-swagger-ui = { version = "8", optional = true }

[features]
default = ["scalar"]
scalar = []
swagger-ui = ["dep:utoipa-swagger-ui"]

[dev-dependencies]
